# PhotoShare

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1a0904030ba4_init.py  5507b57d5d0b_added_rates_table.py  661a836eb090_init.py  67ab204b7cdf_init.py  6a2a07fd39aa_init.py  8360ce23a2b9_description_of_changes.py  962de72a6e4f_.py  ae62f15f80e9_init.py  bfe06a44b7b7_.py
app/: main.py
app/src/: rating.py  schemas.py
app/src/conf/: config.py
app/src/database/: db.py  models.py
app/src/repository/: comments.py  photos.py  rating.py  users.py
app/src/routes/: auth.py  comment.py  comments.py  photos.py  rating.py  rating_routes.py  users.py
app/src/services/: auth.py  cloudinary_services.py  comment_service.py  email.py  logging.py  qr_code_service.py
app/src/services/templates/: email_password_reset_template.html
tests/: conftest.py  make_fake_db.py  test_comments.py  test_main.py  test_rating.py  test_route_auth.py  test_route_user.py
tests/route/: test_route_auth.py  test_route_photo.py  test_route_user.py
tests/unit/: test_cloudinary_services.py  test_db.py  test_qr_code_service.py  test_repository_photos.py  test_repository_rating.py  test_unit_auth.py  test_unit_repository_users.py
